fix overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -51,7 +51,7 @@ body {
   color: var(--color-secondary);
   padding-top: var(--spacing-top); 
   width: 100%;
-  /* overflow: hidden !important; */
+  overflow-x: hidden !important;
   position: relative;
   /* Padding top handled by specific sections if using fixed nav */
 }
